# Wordrush

./: .env.portaldot  README.md
client/: index.html  package-lock.json  package.json
client/src/: App.jsx
client/src/components/screens/: game-screens.jsx  meta-screens.jsx
client/src/config/: app-config.js  portaldot-config.js
client/src/hooks/: use-wallet-session.js
client/src/providers/: reown-provider.jsx
contracts/: README.md  package.json
contracts/ink/: Cargo.toml  README.md  lib.rs
docs/: product-spec.md
server/: .env.example  package-lock.json  package.json
server/src/: index.js  rounds.js  wordpot-contract.js
